kubernetes/couchdb.yaml
kind: Service
apiVersion: v1
metadata:
  name: couchdb
spec:
  selector:
    app: couchdb
  ports:
    - port: 5984
      targetPort: 5984
      nodePort: 30984
      name: couchdb
  type: NodePort
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: couchdb
  name: couchdb
spec:
  selector:
    matchLabels:
      app: couchdb
  replicas: 1
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/couchdb
        name: couchdb
#         tty: true
#         stdin: true
#         lifecycle:
#           postStart:
#             exec:
#               command:
#               - bash
#               - -c
#               - sudo chmod 0400 /etc/secrets/server.key /etc/secrets/robotkey.pem
        ports:
        - containerPort: 5984
          protocol: TCP
          name: couchdb
        volumeMounts:
        - name: secrets
          mountPath: "/etc/secrets"
          defaultMode: 0400
#           readOnly: true
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: couchdb-secrets
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
