kubernetes/das2go.yaml
kind: Service
apiVersion: v1
metadata:
  name: das2go
spec:
  selector:
    app: das2go
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  type: NodePort
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: das2go
  name: das2go
spec:
  selector:
    matchLabels:
      app: das2go
  replicas: 1
  template:
    metadata:
      labels:
        app: das2go
    spec:
      hostNetwork: true
      containers:
      - image: veknet/das2go
        name: das2go
        tty: true
        stdin: true
        ports:
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: "/etc/secrets"
          readOnly: true
        - name: etc-grid-security
          mountPath: /etc/grid-security
      volumes:
      - name: secrets
        secret:
          secretName: das-secrets
      - name: etc-grid-security
        hostPath:
            path: /etc/grid-security
