kubernetes/rucio-traefik.yaml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: ingress-traefik
  namespace: kube-system
#  annotations:
#    traefik.frontend.redirect.entryPoint: "https"
#    traefik.frontend.passTLSCert: "true"
  labels:
    k8s-app: ingress-traefik-backend
spec:
  template:
    metadata:
      labels:
        k8s-app: ingress-traefik-backend
        name: ingress-traefik-backend
    spec:
      serviceAccountName: ingress-traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      volumes:
#      - name: ssl
#        secret:
#          secretName: traefik-cert
      - name: config
        configMap:
          name: traefik-conf
      containers:
      - image: gitlab-registry.cern.ch/cloud/atomic-system-containers/traefik
        name: ingress-traefik-backend
        volumeMounts:
#        - mountPath: "/ssl"
#          name: "ssl"
#          readOnly: true
        - mountPath: "/config"
          name: "config"
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        securityContext:
          privileged: true
        args:
        - -d
        - --configfile=config/rucio-traefik.toml
        - --logLevel=DEBUG
      nodeSelector:
        role: ingress
...

---
kind: Service
apiVersion: v1
metadata:
  name: ingress-traefik
  namespace: kube-system
spec:
  selector:
    k8s-app: ingress-traefik-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: rucio1
      protocol: TCP
      port: 8088
    - name: https
      protocol: TCP
      port: 443
  type: NodePort
...
