kubernetes/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "https"

#     traefik.frontend.passTLSCert: "true"
#     ingress.kubernetes.io/rewrite-target: /
#     traefik.frontend.rule.type: PathPrefixStrip
#     ingress.kubernetes.io/force-hsts: "true"
#     ingress.kubernetes.io/force-ssl-redirect: "true"
#     ingress.kubernetes.io/pass-tls-cert: "true"
#     ingress.kubernetes.io/ssl-proxy-headers: "SSL-Header:VK"
#     ingress.kubernetes.io/enablePassTLSCert: "true"
#     ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
  - host: "cmsweb-test.web.cern.ch"
    http:
      paths:
#       - path: /
#         backend:
#           serviceName: frontend
#           servicePort: 8443
      - path: /httpsgo
        backend:
          serviceName: httpsgo
          servicePort: 8443
  tls:
      - secretName: cluster-tls-cert
